--- a/funnel-extension/manifest.json
+++ b/funnel-extension/manifest.json
@@ -12,6 +12,13 @@
         "clipboardWrite",
         "activeTab"
     ],
+    "content_scripts": [
+        { "all_frames": true,
+          "js": ["googleDocsUtil.js", "receiver.js"],
+          "matches": ["https://docs.google.com/document/*"],
+          "run_at": "document_idle"
+        }
+    ],
     "page_action": {
         "default_icon": {
             "16": "funnel-16x16.png"
