--- a/funnel-extension/manifest.json
+++ b/funnel-extension/manifest.json
@@ -7,6 +7,7 @@
         "persistent": false
     },
     "permissions" : [
+        "declarativeContent",
         "activeTab"
     ],
     "content_scripts": [
