--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "dependencies": {
     "finalhandler": "^1.1.1",
     "mysql": "^2.15.0",
-    "serve-static": "^1.13.2",
-    "strftime": "*",
-    "time": "0.x.x"
+    "serve-static": "^1.13.2"
   }
 }
